--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+test with different sector sizes
 platform-specific device name fixup like sd0 -> /dev/rsd0c
 mbr read
   extended partition
@@ -15,3 +16,7 @@ other solaris maps?
 filesystem tasting
 manpage
 cyl, head, sect command-line override
+regression tests
+  byteswapping
+  components of partition table reading
+  output of entire program
