Call vtoc maps sun x86 disklabels.

--- a/upart.8
+++ b/upart.8
@@ -31,8 +31,8 @@ BSD disklabel. Used by several BSD-derived systems on various platforms.
 EFI GUID partition table. Used on EFI-based systems.
 .It Em MBR
 PC-style MBR. Used on several platforms. Extended partitions are supported.
-.It Em VTOC
-Used by Solaris x86.
+.It Em Sun label
+Sun disk label used by Solaris on x86.
 .El
 .Pp
 The options are as follows:
