Add basic sun sparc label support.

--- a/upart.8
+++ b/upart.8
@@ -32,7 +32,7 @@ EFI GUID partition table. Used on EFI-based systems.
 .It Em MBR
 PC-style MBR. Used on several platforms. Extended partitions are supported.
 .It Em Sun label
-Sun disk label used by Solaris on x86.
+Sun disk label. Both SPARC and x86 formats are supported.
 .El
 .Pp
 The options are as follows:
