Fix sun x86 disk label and extended MBR on big-endian machines.
Fix unnecessary (and harmful) sun x86 label checksum byteswapping.
Byteswap extended MBR offset and sizes when reading location of next MBR.
Improve an extended MBR warning message when bailing on a bad partition.
Disable some apparently useless ended MBR code to fix up bad partitions.

--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@ option to change displayed offset/size units
 interactive restore mode for dumps
 use PACKAGE_NAME instead of "upart" everywhere
 tests:
+  add images with just one map format, to make failures easier to diagnose
+    make these run before the jre-* images with multiple maps
   add tests that fail all the various checks when reading an image
     header too small/big
     bad header/body crc
