Mention vtoc and openbsd extensions to sparc label in manpage.

--- a/upart.8
+++ b/upart.8
@@ -32,7 +32,8 @@ EFI GUID partition table. Used on EFI-based systems.
 .It Em MBR
 PC-style MBR. Used on several platforms. Extended partitions are supported.
 .It Em Sun label
-Sun disk label. Both SPARC and x86 formats are supported.
+Sun disk label. Both SPARC and x86 formats are supported. Both Sun
+VTOC and OpenBSD extensions to the SPARC format are supprted as well.
 .El
 .Pp
 The options are as follows:
