Rework device/plain file handling a little.
Don't modify plainfile option when opening disk, instead save stat
 result in disk struct and test that instead.
Never try to open file in /dev if plainfile option was given.

--- a/upart.8
+++ b/upart.8
@@ -44,9 +44,9 @@ The options are as follows:
 Specify an alternate geometry for the disk. This is useful if the
 geometry could not be determined automatically, or is incorrect.
 .It Fl f
-Indicate that the disk is not a plain file and not a device, if
-.Nm
-is unable to detect this.
+Indicate that
+.Ar path
+is a plain file, and not a device node.
 .It Fl l Ar label
 A text label to save with an image created with
 .Ar w ,
