Use my full name in manpage.

--- a/upart.8
+++ b/upart.8
@@ -85,4 +85,4 @@ Specify an alternative sector size in bytes.
 The
 .Nm
 program was written by
-.An Josh Elsasser Aq josh@elsasser.org .
+.An Joshua Elsasser Aq joshua@elsasser.org .
